--- a/docs/components/myscript-common-element/examples/non-version-specific/get_started.html
+++ b/docs/components/myscript-common-element/examples/non-version-specific/get_started.html
@@ -27,7 +27,7 @@
 <myscript-common-element scheme="https"
                          host="newcloud.myscript.com"
                          applicationkey="515131ab-35fa-411c-bb4d-3917e00faf60"
-                         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad">
+                         hmackey="54b2ca8a-6752-469d-87dd-553bb450e9ad" debug>
 </myscript-common-element>
 <script>
     const paperToast = document.querySelector('paper-toast');
