--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -36,7 +36,7 @@ CSS variable | Default
 @demo examples/v3/rest_text.html Configure component with legacy api [V3]
 @demo examples/index.html Other demonstrations
 -->
-<dom-module id="myscript-common-element">git add
+<dom-module id="myscript-common-element">
     <template>
         <style include="myscript-stylesheet">
             :host {
@@ -648,6 +648,14 @@ CSS variable | Default
 
             _attachGrabber(element, editor) {
 
+                const unFocus = () => {
+                    if (document.selection) {
+                        document.selection.empty();
+                    } else {
+                        window.getSelection().removeAllRanges();
+                    }
+                };
+
                 const patchPointerEvent = (evt) => {
                     if (!evt.pointerId) {
                         evt.pointerId = -1;
@@ -658,6 +666,13 @@ CSS variable | Default
                     return evt;
                 };
 
+                const checkHover = (evt) => {
+                    if (evt.detail.hover()) {
+                        return evt.detail.hover().id === 'editorDomElement' || evt.detail.hover().className.includes('ms-canvas');
+                    } else
+                        return false;
+                };
+
                 const pointerDownHandler = (evt) => { // Trigger a pointerDown
                     patchPointerEvent(evt);
                     if (this.activePointerId) {
@@ -666,6 +681,7 @@ CSS variable | Default
                         }
                     } else if ((evt.button !== 2) && (evt.buttons !== 2)) { // Ignore right click
                         this.activePointerId = evt.pointerId;
+                        unFocus();
                         evt.stopPropagation();
                         editor.pointerDown(MyScriptCommonElement._extractPoint(evt, editor.configuration), evt.pointerType, evt.pointerId);
                     }
@@ -674,11 +690,13 @@ CSS variable | Default
                 const pointerMoveHandler = (evt) => { // Trigger a pointerMove
                     patchPointerEvent(evt);
                     // Only considering the active pointer
-                    if (this.activePointerId && this.activePointerId === evt.pointerId) {
+                    if (checkHover(evt) && this.activePointerId && this.activePointerId === evt.pointerId) {
                         evt.stopPropagation();
                         editor.pointerMove(MyScriptCommonElement._extractPoint(evt, editor.configuration));
                     } else {
-                        this.logger.trace(`${evt.type} event from another pointerid (${evt.pointerId})`, this.activePointerId);
+                        evt.stopPropagation();
+                        this.activePointerId = undefined; // Managing the active pointer
+                        editor.pointerUp(MyScriptCommonElement._extractPoint(evt, editor.configuration));
                     }
                 };
 
@@ -708,7 +726,7 @@ CSS variable | Default
                 const polymerGestureListeners = [{
                     types: ['down'],
                     listener: pointerDownHandler
-                },{
+                }, {
                     types: ['track'],
                     listener: pointerMoveHandler
                 }, {
