[DEV] Adapt examples to smart guide

--- a/docs/components/myscript-common-element/myscript-stylesheet.html
+++ b/docs/components/myscript-common-element/myscript-stylesheet.html
@@ -132,7 +132,7 @@ CSS variable | Default
             .smartguide-in {
                 visibility: visible !important;
                 transition: opacity 0.5s;
-                opacity: 0.9;
+                opacity: 1;
             }
 
             .smartguide-out {
@@ -142,7 +142,7 @@ CSS variable | Default
             }
 
             .prompter-text-container {
-                background-color: white;
+                background-color: rgba(255, 255, 255, 0.9);
                 height: 48px;
                 line-height: 48px;
                 overflow: hidden;
@@ -152,12 +152,12 @@ CSS variable | Default
                 border-bottom: 1px solid lightgray;
                 position: absolute;
                 z-index: 30;
-                color: #808080;
+                color: #757575;
                 -moz-user-select: none;
                 -webkit-user-select: none;
                 -ms-user-select: none;
-                -webkit-tap-highlight-color: transparent;
                 user-select: none;
+                -webkit-tap-highlight-color: transparent;
             }
 
             .prompter-text-container > div > span {
@@ -179,7 +179,7 @@ CSS variable | Default
                     color: black;
                 }
                 100% {
-                    color: grey;
+                    color: #757575;
                 }
             }
 
@@ -194,18 +194,33 @@ CSS variable | Default
 
             .candidates {
                 color: black;
-                padding: 0 10px;
+                flex-direction: column;
                 text-align: center;
                 line-height: 30px;
-                border: 1px solid #CED5D9;
                 border-radius: 3px;
                 position: absolute;
-                background-color: #ffffff;
+                box-shadow: 2px 2px 12px #BDBDBD, -2px 2px 12px #BDBDBD;
+                background-color: #F5F5F5;
                 z-index: 100;
+                -webkit-tap-highlight-color: transparent;
             }
 
             .candidates > span {
                 cursor: pointer;
+                padding: 2px 20px;
+            }
+
+            .candidates > span:hover {
+                background-color: #EEEEEE;
+            }
+
+            .candidates > span:active {
+                background-color: #E0E0E0;
+            }
+
+            .selected-word {
+                font-weight: bold;
+                background-color: #E0E0E0;
             }
 
             .tag-icon {
@@ -213,13 +228,16 @@ CSS variable | Default
                 border: 1px solid lightgrey;
                 font-weight: bold;
                 font-size: large;
+                -moz-user-select: none;
+                -webkit-user-select: none;
+                -ms-user-select: none;
                 user-select: none;
                 position: absolute;
                 z-index: 31;
                 height: 48px;
                 line-height: 48px;
-                background-color: white;
-                color: #808080;
+                background-color: rgba(255, 255, 255, 0.9);
+                color: #757575;
             }
 
             #ellipsis {
@@ -232,34 +250,46 @@ CSS variable | Default
                 padding: 0 8px;
                 font-weight: bold;
                 font-size: x-large;
-                background-color: white;
-                color: #808080;
+                background-color: rgba(255, 255, 255, 0.9);
+                color: #757575;
+                -moz-user-select: none;
+                -webkit-user-select: none;
+                -ms-user-select: none;
                 user-select: none;
+                -webkit-tap-highlight-color: transparent;
             }
 
-            .options {
+            #more-menu {
+                flex-direction: column;
                 margin-right: 12px;
-                padding: 0 10px;
-                text-align: center;
                 line-height: 30px;
-                border: 1px solid #CED5D9;
                 border-radius: 3px;
                 position: absolute;
-                background-color: #ffffff;
                 z-index: 100;
+                box-shadow: 2px 2px 12px #BDBDBD;
+                background-color: #F5F5F5;
             }
 
             .options-label-button {
+                color: black;
                 font-size: 16px;
                 cursor: pointer;
                 box-sizing: border-box;
-                color: #1A9FFF;
                 background: transparent;
                 border: none;
-                padding: 0;
+                padding: 0 24px;
                 margin: 0;
                 height: 40px;
                 outline: none;
+                -webkit-tap-highlight-color: transparent;
+            }
+
+            .options-label-button:hover {
+                background-color: #EEEEEE;
+            }
+
+            .options-label-button:active {
+                background-color: #E0E0E0;
             }
 
             .ps__rail-x {
