--- a/docs/components/myscript-common-element/examples/non-version-specific/customize_style.html
+++ b/docs/components/myscript-common-element/examples/non-version-specific/customize_style.html
@@ -84,7 +84,9 @@
                                  hmackey="5ab1935e-529a-4d48-a695-158450e52b13"
                                  themewidth="2"
                                  themecolor="#FFFFFF"
-                                 touch-action="none">
+                                 touch-action="none"
+                                 disableconvertcontrol
+                                 disableclearcontrol>
         </myscript-common-element>
         <script>
             const themes = [{
