--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -45,7 +45,6 @@ CSS variable | Default
                 --myscript-common-element-hover-color: var(--myscript-editor-hover-color);
                 --myscript-common-element-focus-color: var(--myscript-editor-focus-color);
                 --myscript-common-element-disabled-color: var(--myscript-editor-disabled-color);
-                --myscript-common-element-line-pattern: var(--myscript-editor-line-pattern);
                 --myscript-common-element-capture-background: var(--myscript-editor-capture-background);
                 --myscript-common-element-error-background: var(--myscript-editor-error-background);
                 --myscript-common-element-loader: var(--myscript-editor-loader);
@@ -123,10 +122,9 @@ CSS variable | Default
                        disabled="[[ !canredo ]]" hidden="[[ disableundoredocontrol ]]">
             </paper-fab>
             <div class="spacer"></div>
-            <paper-button mini title="convert" on-tap="convert"
-                          disabled="[[ !canconvert ]]" hidden="[[ disableconvertcontrol ]]">
+            <button class="classic-btn" title="convert" on-tap="convert" disabled="[[ !canconvert ]]" hidden="[[ disableconvertcontrol ]]">
                 Convert
-            </paper-button>
+            </button>
         </nav>
         <div id="editorDomElement"
              class="ms-editor"
