--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -23,6 +23,7 @@ CSS variable | Default
 -------------|--------
 `--myscript-common-element-background` | none
 `--myscript-common-element-color` | #FFFFFF
+`--myscript-common-element-line-pattern` | Classic notebook square pattern
 `--myscript-common-element-button-background` | #1A9FFF
 `--myscript-common-element-button-focus-background` | #1A9FFF
 `--myscript-common-element-button-disabled-background` | #F5F6F7
@@ -44,6 +45,7 @@ CSS variable | Default
                 --myscript-common-element-hover-color: var(--myscript-editor-hover-color);
                 --myscript-common-element-focus-color: var(--myscript-editor-focus-color);
                 --myscript-common-element-disabled-color: var(--myscript-editor-disabled-color);
+                --myscript-common-element-line-pattern: var(--myscript-editor-line-pattern);
                 --myscript-common-element-capture-background: var(--myscript-editor-capture-background);
                 --myscript-common-element-error-background: var(--myscript-editor-error-background);
                 --myscript-common-element-loader: var(--myscript-editor-loader);
@@ -87,6 +89,10 @@ CSS variable | Default
 
             .ms-editor {
                 background: var(--myscript-common-element-background);
+            }
+
+            .ms-editor canvas.ms-rendering-canvas {
+                @apply --myscript-common-element-line-pattern;
             }
 
             .ms-editor canvas.ms-capture-canvas {
