--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -653,6 +653,7 @@ CSS variable | Default
             }
 
             _attachGrabber(element, editor) {
+                let mMaxDiffX = 0;
                 let smartGuidePointerDown = false;
                 let downSmartGuidePoint = null;
 
@@ -722,7 +723,12 @@ CSS variable | Default
                         editor.pointerMove(MyScriptCommonElement._extractPoint(evt, element, editor.configuration));
                     } else if (smartGuidePointerDown) {
                         const point = MyScriptCommonElement._extractPoint(evt, element, editor.configuration);
-                        if (point.y >= downSmartGuidePoint.y + 5 && (point.x >= downSmartGuidePoint.x - 10 && point.x <= downSmartGuidePoint.x + 10)) {
+                        const diffX = Math.abs(downSmartGuidePoint.x - point.x);
+                        const diffY = Math.abs(downSmartGuidePoint.y - point.y);
+                        mMaxDiffX = Math.max(diffX, mMaxDiffX);
+                        const cond1 = diffX < 5 && diffY > 5 && mMaxDiffX < 15;
+                        const cond2 = diffX > 5 && diffY > 5 && mMaxDiffX < 15;
+                        if (cond1 || cond2) {
                             this.activePointerId = evt.pointerId;
                             // Hack for iOS 9 Safari : pointerId has to be int so -1 if > max value
                             const pointerId = evt.pointerId > 2147483647 ? -1 : evt.pointerId;
@@ -758,7 +764,12 @@ CSS variable | Default
                         editor.pointerMove(MyScriptCommonElement._extractPoint(evt, element, editor.configuration));
                     } else if (smartGuidePointerDown) {
                         const point = MyScriptCommonElement._extractPoint(evt, element, editor.configuration);
-                        if (point.y >= downSmartGuidePoint.y + 5 && (point.x >= downSmartGuidePoint.x - 10 && point.x <= downSmartGuidePoint.x + 10)) {
+                        const diffX = Math.abs(downSmartGuidePoint.x - point.x);
+                        const diffY = Math.abs(downSmartGuidePoint.y - point.y);
+                        mMaxDiffX = Math.max(diffX, mMaxDiffX);
+                        const cond1 = diffX < 5 && diffY > 5 && mMaxDiffX < 15;
+                        const cond2 = diffX > 5 && diffY > 5 && mMaxDiffX < 15;
+                        if (cond1 || cond2) {
                             this.activePointerId = evt.pointerId;
                             // Hack for iOS 9 Safari : pointerId has to be int so -1 if > max value
                             const pointerId = evt.pointerId > 2147483647 ? -1 : evt.pointerId;
@@ -775,6 +786,7 @@ CSS variable | Default
 
                 const pointerUpHandler = (evt) => { // Trigger a pointerUp
                     patchPointerEvent(evt);
+                    mMaxDiffX = 0;
                     smartGuidePointerDown = false;
                     const smartGuideIds = ['smartguide', 'prompter-text-container', 'prompter-text', 'tag-icon', 'ellipsis'];
                     const scrollbarClasses = ['ps__rail-x', 'ps__thumb-x'];
@@ -797,6 +809,7 @@ CSS variable | Default
 
                 const polymerPointerUpHandler = (evt) => { // Trigger a pointerUp
                     patchPointerEvent(evt);
+                    mMaxDiffX = 0;
                     smartGuidePointerDown = false;
                     if (this.activePointerId && this.activePointerId === evt.pointerId) { // Only considering the active pointer
                         this.activePointerId = undefined; // Managing the active pointer
