--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -341,6 +341,14 @@ CSS variable | Default
                         notify: true
                     },
                     /**
+                     * Pen style classes
+                     */
+                    penstyleclasses: {
+                        type: String,
+                        value: '',
+                        notify: true
+                    },
+                    /**
                      * Main color used by theme  (supported formats rgb() rgba() hsl() hsla() #rgb #rgba #rrggbb #rrggbbaa)
                      */
                     themecolor: {
@@ -492,7 +500,8 @@ CSS variable | Default
             static get observers() {
                 return [
                     '_updateTheme(editor, theme, themecolor, themewidth)',
-                    '_updatePenStyle(editor, penstyle, pencolor, penwidth)'
+                    '_updatePenStyle(editor, penstyle, pencolor, penwidth)',
+                    '_updatePenStyleClasses(editor, penstyleclasses)'
                 ];
             }
 
@@ -1013,6 +1022,13 @@ CSS variable | Default
                 if (editor) {
                     editor.penStyle = MyScriptCommonElement._generatePenStyle(penstyle, pencolor, penwidth);
                     this.logger.trace('penStyle changed', editor.penStyle);
+                }
+            }
+
+            _updatePenStyleClasses(editor, penstyleclasses) {
+                if (editor && (editor.theme.hasOwnProperty(`.${penstyleclasses}`) || penstyleclasses === '')) {
+                    editor.penStyleClasses = penstyleclasses;
+                    this.logger.trace('penStyleClasses changed', editor.penStyleClasses);
                 }
             }
 
