[FIX] Pen style classes Edge Firefox

--- a/docs/components/myscript-common-element/examples/non-version-specific/customize_style.html
+++ b/docs/components/myscript-common-element/examples/non-version-specific/customize_style.html
@@ -114,7 +114,7 @@
                                  touch-action="none"
                                  disableconvertcontrol
                                  disableclearcontrol
-                                 theme='{".green": {"color": "#00FF00FF", "-myscript-pen-width": "3"}}'
+                                 theme='{".green": {"color": "#00FF00", "-myscript-pen-width": "3"}}'
                                  penstyleclasses="green">
         </myscript-common-element>
         <div id="prompter-css">
