[DEV] Improve smart guide behavior
No more writings from tag icon or actions menu

--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -633,7 +633,9 @@ CSS variable | Default
             _changedListener(event) {
                 if (event.detail) {
                     this.initialized = event.detail.initialized;
-                    this.canclear = event.detail.canClear;
+                    console.log(event.detail.isEmpty);
+                    this.canclear = event.detail.isEmpty ? !event.detail.isEmpty : event.detail.canClear;
+                    console.log(this.canclear);
                     this.canundo = event.detail.canUndo;
                     this.canredo = event.detail.canRedo;
                     this.canexport = event.detail.canExport;
@@ -717,6 +719,9 @@ CSS variable | Default
                             evt.stopPropagation();
                             editor.pointerDown(MyScriptCommonElement._extractPoint(evt, element, editor.configuration), evt.pointerType, evt.pointerId);
                         }
+                    }  else if (evt.target.id === 'ellipsis' || evt.target.id === 'tag-icon') {
+                        hideMenu(evt);
+                        hideCandidates(evt);
                     } else { // FIXME add more complete verification to pointer down on smart guide
                         hideMenu(evt);
                         hideCandidates(evt);
