[DEV] Refactor exportContent to match export_

--- a/docs/components/myscript-common-element/myscript-common-element.html
+++ b/docs/components/myscript-common-element/myscript-common-element.html
@@ -949,9 +949,9 @@ CSS variable | Default
             /**
              * Trigger export
              */
-            exportContent() {
+            export_() {
                 if (this.editor) {
-                    this.editor.exportContent();
+                    this.editor.export_();
                 }
             }
 
